# recipe-app-api

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  compose.yml  pyproject.toml
.github/workflows/: checks.yml
app/app/: settings.py  urls.py
app/core/: admin.py  models.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py
app/core/tests/: test_admin.py  test_commands.py  test_models.py
app/user/: serializers.py  urls.py  views.py
app/user/tests/: test_user_api.py
